--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,5 +1,5 @@
 database.driver=com.mysql.jdbc.Driver
-database.url=jdbc:mysql://localhost:3306/country
+database.url=jdbc:mysql://localhost:3306/marketing
 database.user=root
 database.password=kannada123
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
