--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,18 +1,17 @@
-log = /Users/gn033604/Desktop/Log
-log4j.rootLogger = DEBUG, FILE, INFO, ERROR
-
-# Define the file appender
-log4j.appender.FILE=org.apache.log4j.FileAppender
-log4j.appender.FILE.File=${log}/Abhimarketing.txt
-
-# Define the layout for file appender
-log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
-log4j.appender.FILE.layout.conversionPattern=%d %-5p (%F:%L) - %m%n
-
-# Set the append to false, should not overwrite
-log4j.appender.FILE.Append=true
-
-# Set the DatePattern
-log4j.appender.FILE.DatePattern='.' yyyy-MM-dd-HH-mm
+log = /Users/gn033604/Log
 
 
+# Root logger option
+log4j.rootLogger=INFO, file, Error
+
+# Direct log messages to a log file
+log4j.appender.file=org.apache.log4j.RollingFileAppender
+
+#Redirect to Tomcat logs folder
+#log4j.appender.file.File=${catalina.home}/logs/logging.log
+
+log4j.appender.file.File=${log}/Abhimarketing.txt
+log4j.appender.file.MaxFileSize=10MB
+log4j.appender.file.MaxBackupIndex=10
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
